# quill

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  error.rs  lib.rs  main.rs
src/app/: message.rs  mod.rs  navigation.rs  update.rs
src/document/: element.rs  mod.rs  screenplay.rs
src/ui/: mod.rs  screenplay_editor.rs  view.rs
tests/: document.rs
