[package]
name = "quill"
version = "0.1.0"
edition = "2024"
authors = ["Yon Montoto"]
license = "GPL3"
description = "A native desktop screenplay writing application"

[dependencies]
# GUI Framework
iced = { version = "0.13", features = ["canvas", "tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1